tetrate/tis1502/.chainsaw-test/resource-one.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-1
  namespace: default
spec:
  gatewayClassName: example-gateway-class  # This field is required in v1beta1/v1
  addresses:
  - type: IPAddress
    value: "192.168.1.1"
  listeners:
  - name: http
    port: 80
    protocol: HTTP
