tetrate/tis1502/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-duplicate-gateway-address
spec:
  validationFailureAction: Enforce
